examples/slackbot/resources/slackbot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slackbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slackbot
  template:
    metadata:
      labels:
        app: slackbot
    spec:
      containers:
        - name: slackbot
          image: zzstoatzz/slackbot:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: slackbot
spec:
  selector:
    app: slackbot
  ports:
    - port: 80
      targetPort: 8000
